-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.9.2
-
-
5165c037ebbc3948d777595610bc62beb275a9a8 (qt-creator/qt-creator/4.11)
When using limits.h in a source file it will see it as being the one provided with libclang instead of the one on the system. This means if you right click it and go to Follow Symbol Under Cursor it will open the limits.h inside libclang and not the one in /usr/include.
Additionally as a result, if you use the PTHREAD_STACK_MIN macro in the source code then it will indicate that it is not a valid identifier because the limits.h in libclang does not define it.
Building the project works fine so it is just when interacting with it in Qt Creator.
- resulted in
-
QTCREATORBUG-23451 Code model can't find compiler-supplied headers (stdarg.h, stddef.h, immintrin.h, etc.)
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-22898 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 277020,4 | Clang: Avoid consuming gcc internal include paths | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |